--- a/css/style.css
+++ b/css/style.css
@@ -10181,10 +10181,9 @@ footer .paymet-type li.visa {
 
 /* line 268, ../sass/style.scss */
 .thanks-modal .modal-content {
-  height: 150px;
   padding: 35px;
 }
-/* line 271, ../sass/style.scss */
+/* line 270, ../sass/style.scss */
 .thanks-modal .modal-content .btn {
   margin-top: 20px;
 }
@@ -10192,155 +10191,160 @@ footer .paymet-type li.visa {
 /* MODAL END */
 /* MEDIA QUERY START */
 @media (min-width: 1200px) {
-  /* line 283, ../sass/style.scss */
+  /* line 282, ../sass/style.scss */
   .container {
     width: 1170px;
   }
 
-  /* line 287, ../sass/style.scss */
+  /* line 286, ../sass/style.scss */
   .call-to-action .video-wrap {
     width: 1170px;
   }
-  /* line 289, ../sass/style.scss */
+  /* line 288, ../sass/style.scss */
   .call-to-action .video-wrap .call-to-action-btn-group {
     width: 53%;
     padding-top: 15%;
   }
-  /* line 293, ../sass/style.scss */
+  /* line 292, ../sass/style.scss */
   .call-to-action .video-wrap .hand-img {
     background: url("../img/hand-1170.png") no-repeat;
     width: 558px;
     height: 619px;
   }
-  /* line 298, ../sass/style.scss */
+  /* line 297, ../sass/style.scss */
   .call-to-action .video-wrap .download-list {
     margin-top: 228px;
   }
-  /* line 301, ../sass/style.scss */
+  /* line 300, ../sass/style.scss */
   .call-to-action .video-wrap .btn {
     margin-bottom: 200px;
   }
 }
 @media (min-width: 1400px) {
-  /* line 308, ../sass/style.scss */
+  /* line 307, ../sass/style.scss */
   body {
     font-size: 14px;
   }
 
-  /* line 311, ../sass/style.scss */
+  /* line 310, ../sass/style.scss */
   .container {
     width: 1360px;
   }
 
-  /* line 314, ../sass/style.scss */
+  /* line 313, ../sass/style.scss */
   header .header-nav {
     margin-top: 16px;
   }
 
-  /* line 318, ../sass/style.scss */
+  /* line 317, ../sass/style.scss */
   .call-to-action .video-wrap {
     width: 1360px;
   }
-  /* line 320, ../sass/style.scss */
+  /* line 319, ../sass/style.scss */
   .call-to-action .video-wrap .call-to-action-btn-group {
     width: 53%;
     padding-top: 15%;
   }
-  /* line 324, ../sass/style.scss */
+  /* line 323, ../sass/style.scss */
   .call-to-action .video-wrap .hand-img {
     background: url("../img/hand-1560.png") no-repeat;
     width: 645px;
     height: 717px;
     background-size: 100%;
   }
-  /* line 330, ../sass/style.scss */
+  /* line 329, ../sass/style.scss */
   .call-to-action .video-wrap .download-list {
     margin-top: 228px;
   }
-  /* line 333, ../sass/style.scss */
+  /* line 332, ../sass/style.scss */
   .call-to-action .video-wrap .btn {
     margin-bottom: 200px;
   }
 
-  /* line 344, ../sass/style.scss */
+  /* line 343, ../sass/style.scss */
   .process p br {
     display: none;
   }
 
-  /* line 349, ../sass/style.scss */
+  /* line 348, ../sass/style.scss */
   .btn.blue-border, a.btn.blue-border {
     width: 240px;
   }
 
-  /* line 352, ../sass/style.scss */
+  /* line 351, ../sass/style.scss */
   .btn, a.btn {
     line-height: 50px;
   }
 
-  /* line 355, ../sass/style.scss */
+  /* line 354, ../sass/style.scss */
   .call-to-action .form-block .app-store-link li {
     line-height: 54px;
   }
 
-  /* line 358, ../sass/style.scss */
+  /* line 357, ../sass/style.scss */
   input[type="text"] {
     height: 54px;
   }
 
-  /* line 361, ../sass/style.scss */
+  /* line 360, ../sass/style.scss */
   .call-to-action .video-wrap .play-video-btn {
     width: 118px;
     height: 117px;
     background: url("../img/play-btn-icon.png") no-repeat;
   }
 
-  /* line 366, ../sass/style.scss */
+  /* line 365, ../sass/style.scss */
   .call-to-action .video-wrap .download-list li a {
     width: 52px;
     height: 52px;
   }
 
-  /* line 370, ../sass/style.scss */
+  /* line 369, ../sass/style.scss */
   .call-to-action .video-wrap .download-list li a.download-icon {
     background: url("../img/download-icon.png") no-repeat;
   }
 
-  /* line 373, ../sass/style.scss */
+  /* line 372, ../sass/style.scss */
   .call-to-action .video-wrap .download-list li a.fb {
     background: url("../img/fb-icon.png") no-repeat;
   }
 }
 @media (max-height: 800px) {
-  /* line 381, ../sass/style.scss */
+  /* line 380, ../sass/style.scss */
   .call-to-action .video-wrap .call-to-action-btn-group {
     padding-top: 0;
   }
-  /* line 384, ../sass/style.scss */
+  /* line 383, ../sass/style.scss */
   .call-to-action .video-wrap .download-list {
     margin-top: 170px;
   }
-  /* line 387, ../sass/style.scss */
+  /* line 386, ../sass/style.scss */
   .call-to-action .video-wrap .btn {
     margin-bottom: 190px;
   }
 }
 @media (max-width: 991px) {
-  /* line 396, ../sass/style.scss */
+  /* line 395, ../sass/style.scss */
   h4 {
     font-size: 2.1em;
   }
 
-  /* line 399, ../sass/style.scss */
+  /* line 398, ../sass/style.scss */
   h6 {
     font-size: 1.4em;
   }
 
-  /* line 402, ../sass/style.scss */
+  /* line 401, ../sass/style.scss */
+  .hand-img {
+    display: none;
+  }
+
+  /* line 404, ../sass/style.scss */
   .navbar-toggle {
     margin-bottom: 0;
     margin-top: 3px;
   }
-  /* line 407, ../sass/style.scss */
+  /* line 409, ../sass/style.scss */
   .navbar-toggle .icon-bar {
     background: #4eb0d8;
     width: 30px;
@@ -10348,12 +10352,12 @@ footer .paymet-type li.visa {
     border-radius: 3px;
   }
 
-  /* line 414, ../sass/style.scss */
+  /* line 416, ../sass/style.scss */
   header {
     -webkit-box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.4);
     box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.4);
   }
-  /* line 417, ../sass/style.scss */
+  /* line 419, ../sass/style.scss */
   header .header-nav {
     position: absolute;
     top: 54px;
@@ -10362,42 +10366,252 @@ footer .paymet-type li.visa {
     background: #4eb0d8;
     margin-top: 0;
     padding: 0;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
   }
-  /* line 425, ../sass/style.scss */
+  /* line 429, ../sass/style.scss */
   header .header-nav li {
     display: block;
     text-align: center;
     border-bottom: 1px solid #fff;
   }
-  /* line 429, ../sass/style.scss */
+  /* line 433, ../sass/style.scss */
   header .header-nav li:active, header .header-nav li:hover {
     background: #fff;
     border-bottom: 1px solid #4eb0d8;
   }
-  /* line 433, ../sass/style.scss */
+  /* line 437, ../sass/style.scss */
   header .header-nav li + li {
     margin: 0;
   }
-  /* line 436, ../sass/style.scss */
+  /* line 440, ../sass/style.scss */
   header .header-nav li a {
     color: #fff;
     padding: 10px 0;
     display: block;
     font-size: 1.6em;
   }
-  /* line 441, ../sass/style.scss */
+  /* line 445, ../sass/style.scss */
   header .header-nav li a:active, header .header-nav li a:hover {
     color: #4eb0d8;
   }
 
-  /* line 451, ../sass/style.scss */
+  /* line 455, ../sass/style.scss */
   .work-process .process p br {
     display: none;
   }
 
-  /* line 460, ../sass/style.scss */
+  /* line 461, ../sass/style.scss */
+  .call-to-action {
+    height: 585px;
+  }
+  /* line 464, ../sass/style.scss */
+  .call-to-action .video-wrap {
+    width: 100%;
+  }
+  /* line 466, ../sass/style.scss */
+  .call-to-action .video-wrap .btn {
+    margin-bottom: 0;
+  }
+  /* line 469, ../sass/style.scss */
+  .call-to-action .video-wrap .download-list {
+    margin-top: 0;
+    position: absolute;
+    bottom: -300px;
+    left: 21%;
+  }
+  /* line 475, ../sass/style.scss */
+  .call-to-action .video-wrap .call-to-action-btn-group {
+    width: 100%;
+    position: absolute;
+    top: 190px;
+    left: 0;
+    padding-top: 0 !important;
+    height: 240px;
+  }
+  /* line 482, ../sass/style.scss */
+  .call-to-action .video-wrap .call-to-action-btn-group .btn-wrap {
+    position: absolute;
+    top: -100px;
+    left: 21%;
+  }
+  /* line 487, ../sass/style.scss */
+  .call-to-action .video-wrap .call-to-action-btn-group .btn.blue-bg {
+    width: 210px;
+    float: right;
+    margin-left: 30px;
+  }
+  /* line 493, ../sass/style.scss */
+  .call-to-action .video-wrap .play-video-btn {
+    position: absolute;
+    right: 20%;
+    top: 122px;
+  }
+  /* line 498, ../sass/style.scss */
+  .call-to-action .video-wrap .action-text {
+    width: 60%;
+  }
+
+  /* line 510, ../sass/style.scss */
   footer .footer-nav li + li {
     margin-left: 13px;
+  }
+}
+@media (max-width: 767px) {
+  /* line 520, ../sass/style.scss */
+  .call-to-action .video-wrap .action-text {
+    width: 85%;
+  }
+  /* line 524, ../sass/style.scss */
+  .call-to-action .video-wrap .call-to-action-btn-group .btn-wrap {
+    left: 9%;
+  }
+  /* line 528, ../sass/style.scss */
+  .call-to-action .video-wrap .download-list {
+    left: 9%;
+  }
+  /* line 531, ../sass/style.scss */
+  .call-to-action .video-wrap .play-video-btn {
+    margin-right: 0;
+  }
+
+  /* line 536, ../sass/style.scss */
+  .process {
+    margin-bottom: 50px;
+  }
+  /* line 538, ../sass/style.scss */
+  .process p {
+    font-size: 2.2em;
+    padding: 0 30px;
+  }
+
+  /* line 544, ../sass/style.scss */
+  .advantages-wrap .advantage {
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+  /* line 548, ../sass/style.scss */
+  .advantages-wrap .advantage .advantage-text h4, .advantages-wrap .advantage .advantage-text h5 {
+    font-size: 1.6em;
+  }
+  /* line 551, ../sass/style.scss */
+  .advantages-wrap .advantage .advantage-text span {
+    font-size: 1.2em;
+  }
+  /* line 554, ../sass/style.scss */
+  .advantages-wrap .advantage .advantage-text p {
+    font-size: 1.4em;
+  }
+  /* line 556, ../sass/style.scss */
+  .advantages-wrap .advantage .advantage-text p br {
+    display: none;
+  }
+
+  /* line 563, ../sass/style.scss */
+  .review {
+    margin-bottom: 30px;
+  }
+
+  /* line 567, ../sass/style.scss */
+  footer .paymet-type {
+    float: none;
+    text-align: center;
+    margin-top: 20px;
+  }
+}
+@media (max-width: 599px) {
+  /* line 578, ../sass/style.scss */
+  .call-to-action .video-wrap .action-text {
+    width: 96%;
+  }
+  /* line 582, ../sass/style.scss */
+  .call-to-action .video-wrap .call-to-action-btn-group .btn-wrap {
+    left: 3%;
+  }
+  /* line 586, ../sass/style.scss */
+  .call-to-action .video-wrap .download-list {
+    left: 3%;
+  }
+  /* line 589, ../sass/style.scss */
+  .call-to-action .video-wrap .play-video-btn {
+    right: 17%;
+  }
+
+  /* line 594, ../sass/style.scss */
+  .footer-nav {
+    display: none;
+  }
+
+  /* line 599, ../sass/style.scss */
+  footer span {
+    display: block;
+    text-align: center;
+  }
+}
+@media (max-width: 479px) {
+  /* line 608, ../sass/style.scss */
+  .call-to-action .video-wrap .action-text {
+    padding-top: 15%;
+  }
+  /* line 610, ../sass/style.scss */
+  .call-to-action .video-wrap .action-text h4 {
+    font-size: 2em;
+  }
+  /* line 614, ../sass/style.scss */
+  .call-to-action .video-wrap .download-list {
+    bottom: -330px;
+  }
+  /* line 617, ../sass/style.scss */
+  .call-to-action .video-wrap .play-video-btn {
+    top: 255px;
+    right: 10%;
+  }
+  /* line 622, ../sass/style.scss */
+  .call-to-action .video-wrap .call-to-action-btn-group .btn-wrap {
+    left: 0%;
+    padding: 0 10px;
+    top: -122px;
+  }
+  /* line 626, ../sass/style.scss */
+  .call-to-action .video-wrap .call-to-action-btn-group .btn-wrap .btn {
+    width: 100%;
+    margin: 0;
+  }
+  /* line 630, ../sass/style.scss */
+  .call-to-action .video-wrap .call-to-action-btn-group .btn-wrap .btn + .btn {
+    margin-top: 10px;
+  }
+
+  /* line 640, ../sass/style.scss */
+  .process p {
+    padding: 0 10px;
+  }
+
+  /* line 646, ../sass/style.scss */
+  .advantages-wrap .advantage .col-xs-5 {
+    display: none;
+  }
+  /* line 649, ../sass/style.scss */
+  .advantages-wrap .advantage .col-xs-7 {
+    width: 100% !important;
+  }
+  /* line 653, ../sass/style.scss */
+  .advantages-wrap .advantage .advantage-text h5, .advantages-wrap .advantage .advantage-text h4 {
+    margin-bottom: 10px;
+    font-size: 1.7em;
+  }
+  /* line 657, ../sass/style.scss */
+  .advantages-wrap .advantage .advantage-text span {
+    font-size: 1.3em;
+  }
+  /* line 660, ../sass/style.scss */
+  .advantages-wrap .advantage .advantage-text p {
+    font-size: 1.5em;
+  }
+  /* line 664, ../sass/style.scss */
+  .advantages-wrap .advantage .btn.blue-border, .advantages-wrap .advantage a.btn.blue-border {
+    width: 150px;
+    font-size: 1.4em;
   }
 }
 /* MEDIA QUERY END */
