--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,8 @@
 header{
 	height: 54px;
 	background: #fff;
-
+	-webkit-box-shadow: 0px 0px 11px rgba(0,0,0, .4);
+	box-shadow: 0px 0px 11px rgba(0,0,0, .4);
 		.logo{
 			float: left;
 			margin-top: 14px;
@@ -38,6 +39,11 @@ main{
 	background: url('../img/video-bg.jpg') no-repeat center;
 	height: 96vh;
 	background-size: cover;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
 	.video-wrap{	
 		width: 960px;
 		height: 100%;
@@ -93,6 +99,10 @@ main{
 				background: url('../img/sprite.png') no-repeat;
 				outline: none;
 				margin-right: 60px;
+				border-radius: 50%;
+					&:hover{
+						opacity: .7;
+					}
 			}
 
 			.download-list{
@@ -108,6 +118,10 @@ main{
 							background: url('../img/sprite.png') no-repeat;
 							width: 43px; 
 							height: 43px;
+							border-radius: 50%;
+								&:hover{
+									opacity: .7;
+								}
 								&.download-icon{
 									background-position: -46px -120px;
 								}
@@ -121,6 +135,8 @@ main{
 	.form-block{
 		padding: 9px 0;
 		width: 100%;
+		-webkit-box-shadow: 0px 0px 11px rgba(0,0,0, .4);
+		box-shadow: 0px 0px 11px rgba(0,0,0, .4);
 		.app-store-link{
 			li{
 				display: inline-block;
@@ -210,7 +226,7 @@ footer{
 	padding: 40px 0;
 	.footer-nav{
 		margin: 7px 0 27px 0;
-		float: left;
+		float: none;
 		@extend %NavLinkStyle;
 		@extend %transitionLiner;
 		li{
@@ -223,7 +239,7 @@ footer{
 		}
 	}
 	span{
-		display: inline-block;
+		display: block;
 		color: #bbb;
 		font-size: 1.3em;
 	}
@@ -232,6 +248,7 @@ footer{
 			li{
 				display: inline-block;
 				background: url('../img/sprite.png') no-repeat;
+				vertical-align: middle;
 					& + li{
 						margin-left: 32px;
 					}
@@ -253,7 +270,34 @@ footer{
 /* FOOTER END */
 
 /* MODAL START */
-
+.close{
+	position: absolute;
+    top: 0px;
+    right: -40px;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    opacity: 1;
+    	& span{
+    		display: inline-block;
+		    width: 24px;
+		    height: 3px;
+		    background: #fff;
+		    -webkit-transform: rotate(45deg);
+		    -ms-transform: rotate(45deg);
+		    -o-transform: rotate(45deg);
+		    transform: rotate(45deg);
+		    	& + span{
+		    		position: absolute;
+				    top: 16px;
+				    left: 0;
+				    -webkit-transform: rotate(-45deg);
+				    -ms-transform: rotate(-45deg);
+				    -o-transform: rotate(-45deg);
+				    transform: rotate(-45deg);
+		    	}
+    	}
+}
 .videoModal{
 	.modal-content{
 		height: 600px;
@@ -262,6 +306,7 @@ footer{
 		iframe{
 			width: 100%;
 			height: 100%;
+			border: none;
 		}
 }
 .thanks-modal{
@@ -269,6 +314,9 @@ footer{
 		padding: 35px;
 			.btn{
 				margin-top: 20px;
+			}
+			h6{
+				text-transform: none;
 			}
 	}
 }
@@ -303,7 +351,7 @@ footer{
 		}
 	}
 }
-@media (min-width: 1400px){
+@media (min-width: 1600px){
 	body{
 		font-size: 14px;
 	}
@@ -314,6 +362,8 @@ footer{
 		margin-top: 16px;
 	}
 	.call-to-action{
+		background: url("../img/video-bg-1600.jpg") no-repeat center;
+		background-size: cover;
 		.video-wrap{
 			width: 1360px;
 				.call-to-action-btn-group{
@@ -390,8 +440,52 @@ footer{
 	}
 }
 
-
+@media (max-height: 700px){
+	.call-to-action{
+		.video-wrap{
+				.btn-wrap{
+					padding-top: 50px;
+				}
+				.btn{
+					margin-bottom: 100px;
+				}
+				.hand-img{
+					width: 459px;
+					height: 510px;
+					background: url('../img/hand.png') no-repeat;
+					background-size: 100%;
+				}
+		}
+	}
+}
+@media (min-width: 1600px) and (max-height: 800px){
+	.call-to-action{
+		.video-wrap{
+				.hand-img{
+					background: url('../img/hand-1170.png') no-repeat;
+					width: 558px;
+					height: 619px;
+				}
+		}
+	}
+}
+@media (min-width: 1600px) and (max-height: 700px){
+	.call-to-action{
+		.video-wrap{
+				.hand-img{
+					width: 459px;
+					height: 510px;
+					background: url('../img/hand.png') no-repeat;
+					background-size: 100%;
+					right: 17%;
+				}
+		}
+	}
+}
 @media (max-width: 991px){
+	body{
+		padding-bottom: 100px;
+	}
 	h4{
 		font-size: 2.1em;
 	}
@@ -402,20 +496,19 @@ footer{
 		display: none;	
 	}
 	.navbar-toggle{
-		
+		padding-right: 0;
 		margin-bottom: 0;
-		margin-top: 3px;
-
+		margin-top: 8px;
+		margin-right: 0;
 		 .icon-bar{
 		 	background: #4eb0d8;
 		 	width: 30px;
-    		height: 6px;
+    		height: 3px;
     		border-radius: 3px;
 		 }
 	}
 	header{
-		-webkit-box-shadow: 0px 0px 11px rgba(0,0,0, .4);
-		box-shadow: 0px 0px 11px rgba(0,0,0, .4);
+		
 		.header-nav{
 			position: absolute;
 			top: 54px;
@@ -449,6 +542,10 @@ footer{
 				}
 		}
 	}
+	.videoModal .modal-content{
+		height: 350px;
+	}
+
 	.work-process{
 		.process{
 			p{
@@ -483,6 +580,7 @@ footer{
     					position: absolute;
     					top: -100px;
     					left: 21%;
+    					padding-top: 0;
     				}		
 					.btn.blue-bg{
 						width: 210px;
@@ -520,6 +618,12 @@ footer{
 	}
 }
 @media (max-width: 767px){
+	body{
+		padding-bottom: 0;
+	}
+	.modal-dialog{
+		width: 90%;
+	}
 	.call-to-action{
 		height: auto;
 		.video-wrap{
@@ -539,11 +643,15 @@ footer{
 				margin-right: 0;
 			}
 		} 
+		.form-block{
+			-webkit-box-shadow: none;
+			box-shadow: none;
+		}
 	} 
 	.process{
 		margin-bottom: 50px;
 			p{
-				font-size: 2.2em;
+				font-size: 1.8em;
 				padding: 0 30px;
 			}
 	}
@@ -583,6 +691,7 @@ footer{
 	.advantage-img{
 		margin-bottom: 30px;
 	}
+
 }
 @media (max-width: 660px){
 	.call-to-action{
@@ -630,6 +739,13 @@ footer{
 	} 
 }
 @media (max-width: 479px){
+	.close{
+		top: -5px;
+    	right: 0px;
+	}
+	.videoModal .modal-content{
+		height: 300px;
+	}
 	.call-to-action{
 		.video-wrap{
 			.action-text{
